# flowcore

./: .coverage  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.full.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: configuration.md  dsl-reference.md  production.md
docs/how-to/: first-workflow.md  multi-tenancy.md  observability.md  sagas.md
examples/: parallel_onboarding.py  payment_with_saga.py  versioned_deployment.py
migrations/: env.py
migrations/versions/: 8cd0de7aa8de_add_tenant_id_to_executions.py  978465238af9_add_workflow_version_to_executions.py  b3a96dc818a5_initial_migration.py
src/flowcore/: __init__.py  demo.py
src/flowcore/adapters/api/: main.py
src/flowcore/adapters/api/routes/: workflows.py
src/flowcore/adapters/worker/: celery_app.py  tasks.py
src/flowcore/application/services/: workflow_service.py
src/flowcore/cli/: client.py  main.py
src/flowcore/domain/dsl/: exceptions.py  models.py  primitives.py  registry.py
src/flowcore/domain/engine/: dag.py  decision.py  executor.py  saga.py
src/flowcore/infrastructure/db/: models.py  session.py
src/flowcore/infrastructure/repositories/: sync_workflow_repository.py  workflow_repository.py
src/flowcore/observability/: tracing.py
tests/integration/: conftest.py  test_workflow_execution.py
tests/unit/: test_async_repository.py  test_atomic_transactions.py  test_cli.py  test_cli_client.py  test_cli_main.py  test_dag.py  test_decision.py  test_dsl.py  test_engine.py  test_multitenancy.py  test_phase2_distributed.py  test_primitives.py  test_saga.py  test_session.py  test_sync_repository.py  test_tracing.py  test_versioning.py  test_workflow_service.py
