[project]
name = "flowcore"
version = "0.1.0"
description = "A distributed and durable workflow engine"
authors = [{ name = "Ezequiel Ranieri", email = "ez.ranieri@gmail.com" }]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "celery>=5.5.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",
    "loguru>=0.7.0",
    "opentelemetry-api>=1.20.0",
    "pydantic>=2.0.0",
    "networkx>=3.6.1",
]
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "docker>=7.1.0",
    "httpx>=0.28.1",
    "pytest-celery>=1.3.0",
    "testcontainers>=4.14.2",
]
